--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "bulma": "^0.9.4",
     "core-js": "^3.8.3",
+    "font-awesome": "^4.7.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
